<?xml version="1.0"?>
<package format="2">
  <name>udev_rules</name>
  <version>0.0.1</version>
  <description>Create new udev news</description>
  <maintainer email="alfonso_rudy@yahoo.com">Rudy Alfonso</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
