<?xml version="1.0"?>
<package format="2">
  <name>tictactoe</name>
  <version>0.0.1</version>
  <description>Tic-Tac-Toe Central Processing Unit</description>
  <maintainer email="alfonso_rudy@yahoo.com">Rudy Alfonso</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tictactoe_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tictactoe_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
